# poster-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2019-09-06-124452_create_todos/: up.sql
src/: lib.rs  main.rs  schema.rs
src/application/: mod.rs
src/application/controller/: todo.rs
src/application/presenter/: todo.rs
src/application/usecase/: todo.rs
src/controller/: todo.rs
src/domain/entity/: todo.rs
src/domain/repository/: todo.rs
src/handler/: todo.rs
src/infrastructure/mock/: todo.rs
src/infrastructure/postgres/: connection.rs  mod.rs
src/infrastructure/postgres/adapter/: todo.rs
src/infrastructure/postgres/table/: todo.rs
