[package]
name = "poster-server"
version = "0.1.0"
authors = ["Souma Suzuki <suzuki.souma@hrbrain.co.jp>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.6"
structopt = "0.3"
structopt-derive = "0.3"
