[package]
name = "poster-server"
version = "0.1.0"
authors = ["Souma Suzuki <suzuki.souma@hrbrain.co.jp>"]
edition = "2018"

[dependencies]
diesel = { version = "1", features = ["postgres", "chrono", "r2d2"] }
r2d2 = "0.8"
actix-web = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.6"
structopt = "0.3"
structopt-derive = "0.3"
